fixed the spacing on the top

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,7 +58,7 @@ a {
 .homepage {
   background-color: var(--background-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 60px 20px;
 }
 .homepage h2 {
   font-family: var(--paragraph-font);
@@ -86,7 +86,7 @@ a {
   border: 4px solid var(--btn-color);
 }
 .about-section {
-  padding: 160px 20px;
+  padding: 60px 20px;
 }
 .about-section h1 {
   font-size: 64px;
